# Mic-Plot-Generator

./: .gitignore  README.md  collectstatic.bat  generate_secret_key.py  pyproject.toml  requirements.txt  run.bat  scss.bat  setup.bat  setup_p1.bat  setup_p2.bat
main/: settings.py  urls.py  wsgi.py
micplot/: admin.py  apps.py  dochandler.py  localsettings.py  models.py  urls.py  utils.py  views.py
micplot/static/css/: base-anim.css  base.css  build.css  build.css.map  error.css
micplot/static/js/: base-anim.js  micplot.js
micplot/static/scss/: theme.scss
micplot/templates/: 400.html  403.html  404.html  500.html  act-new.html  act.html  base-error.html  base-generic.html  index.html  mic-new.html  robots.txt  scene-new-multiple.html  scene-new.html  show-new.html  show.html
