[tool.poetry]
name = "Mic-Plot-Generator"
version = "0.1.0"
description = "Django-based program for creating radio mic plots, aimed at theatrical productions"
authors = ["tomgxz <tomgxz.dev@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Tomgxz/Mic-Plot-Generator"
keywords = ["html","django","scss","theatre","docx-generator","theatre-management"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.5"
django-bootstrap-v5 = "^1.0.11"
whitenoise = "^6.5.0"
python-docx = "^0.8.11"
msoffice2pdf = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
