[tool.poetry]
name = "Mic-Plot-Generator"
version = "0.1.0"
description = "Django-based program for creating radio mic plots, aimed at theatrical productions"
authors = ["tomgxz <tomgxz.dev@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Tomgxz/Mic-Plot-Generator"
keywords = ["html","django","scss","theatre","docx-generator","theatre-management"]
